--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
       <button id="js-button" type="submit">Salvar</button>
     </form>
 
-  <script type="module" src="build/index.js"></script>
+    <script type="module" src="build/bundle.js"></script>
   </body>
 </html>
