captura submit do form

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Cadastro de pessoas</h1>
-    <form action="#" class="form js-form">
+    <form class="form js-form">
       <label for="name">
         Nome
         <input
